Changes for 3.0.3rc1

New features:

Bug fixes:
........S. [ZBX-10551] fixed possible crash when constants are extracted from invalid trigger expression containing '{' without matching '}' (gleb)
..F....... [ZBX-10646] fixed adding trigger prototype dependencies when cloning a host or template (Ivo)
..F....... [ZBX-10511] fixed pagination throwing an error after performing enable or disable via link on an object (Ivo)
........S. [ZBX-10312] changed sum(), str(), regexp(), iregexp() trigger functions to return 0 if there are no data in the requested range (wiper)

--------------------------------------------------------------------------------
Changes for 3.0.2

3.0.2rc1 was released as 3.0.2 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.2rc1

New features:
........S. [ZBXNEXT-3210] replaced user macro cache with expanded trigger expression caching (wiper)
A.F....... [ZBX-1357] updated Chinese (China), Chinese (Taiwan), Czech, English (United States), French, Greek, Italian, Japanese, Korean, Polish, Portuguese (Brazil), Romanian, Russian, Slovak, Turkish, Ukrainian, Vietnamese translations; thanks to Zabbix translators (zalex_ua)
..F....... [ZBX-10318] added disabling of [-] or [+] buttons when screen column or row cannot be removed or added (Sasha)

Bug fixes:
...G...PS. [ZBX-10626] fixed crash in agent's collector process on Solaris 8 (gleb)
..F....... [ZBX-10564] fixed trigger acknowledging in slide shows (Cemeris)
.......PS. [ZBX-10571] fixed network discovery based on agent checks (gleb)
A......... [ZBX-9162] fixed performance of the hostgroup.get method under MySQL (Gunars, Sasha)
.......PS. [ZBX-10575] fixed history cache memory leak when floating value calculations resulted in out of bounds value (wiper)
.......PS. [ZBX-10410] fixed possible crashes during history cache synchronisation during shutdown/crash (Sandis, wiper)