@@ -358,15 +358,16 @@ out:
 	return ret;
 }
 
-#define OP_EQ	0
-#define OP_NE	1
-#define OP_GT	2
-#define OP_GE	3
-#define OP_LT	4
-#define OP_LE	5
-#define OP_LIKE	6
-#define OP_BAND	7
-#define OP_MAX	8
+#define OP_UNKNOWN	-1
+#define OP_EQ		0
+#define OP_NE		1
+#define OP_GT		2
+#define OP_GE		3
+#define OP_LT		4
+#define OP_LE		5
+#define OP_LIKE		6
+#define OP_BAND		7
+#define OP_MAX		8
 
 static int	evaluate_COUNT_one(unsigned char value_type, int op, history_value_t *value, const char *arg2,
 		const char *arg2_2)
@@ -510,9 +511,9 @@ static int	evaluate_COUNT_one(unsigned char value_type, int op, history_value_t 
  *             parameters - up to four comma-separated fields:                *
  *                            (1) number of seconds/values                    *
  *                            (2) value to compare with (optional)            *
- *                                Exception is for comparison operator "band".*
- *                                With "band" this parameter is mandatory and *
- *                                can take one of 2 forms:                    *
+ *                                Becomes mandatory for numeric items if 3rd  *
+ *                                parameter is specified. With "band" can     *
+ *                                take one of 2 forms:                        *
  *                                  - value_to_compare_with/mask              *
  *                                  - mask                                    *
  *                            (3) comparison operator (optional)              *
@@ -525,7 +526,7 @@ static int	evaluate_COUNT_one(unsigned char value_type, int op, history_value_t 
 static int	evaluate_COUNT(char *value, DC_ITEM *item, const char *function, const char *parameters, time_t now)
 {
 	const char			*__function_name = "evaluate_COUNT";
-	int				arg1, flag, op, numeric_search, nparams, count = 0, i, ret = FAIL;
+	int				arg1, flag, op = OP_UNKNOWN, numeric_search, nparams, count = 0, i, ret = FAIL;
 	int				seconds = 0, nvalues = 0;
 	char				*arg2 = NULL, *arg2_2 = NULL, *arg3 = NULL;
 	zbx_vector_history_record_t	values;
@@ -545,58 +546,8 @@ static int	evaluate_COUNT(char *value, DC_ITEM *item, const char *function, cons
 	if (2 <= nparams && SUCCEED != get_function_parameter_str(item->host.hostid, parameters, 2, &arg2))
 		goto out;
 
-	if (3 <= nparams)
-	{
-		int	fail = 2;
-
-		if (SUCCEED != get_function_parameter_str(item->host.hostid, parameters, 3, &arg3))
-			goto out;
-
-		if ('\0' == *arg3)
-			op = (0 != numeric_search ? OP_EQ : OP_LIKE);
-		else if (0 == strcmp(arg3, "eq"))
-			op = OP_EQ;
-		else if (0 == strcmp(arg3, "ne"))
-			op = OP_NE;
-		else if (0 == strcmp(arg3, "gt"))
-			op = OP_GT;
-		else if (0 == strcmp(arg3, "ge"))
-			op = OP_GE;
-		else if (0 == strcmp(arg3, "lt"))
-			op = OP_LT;
-		else if (0 == strcmp(arg3, "le"))
-			op = OP_LE;
-		else if (0 == strcmp(arg3, "like"))
-			op = OP_LIKE;
-		else if (0 == strcmp(arg3, "band"))
-		{
-			op = OP_BAND;
-
-			if (NULL != (arg2_2 = strchr(arg2, '/')))
-			{
-				*arg2_2 = '\0';	/* end of the 1st part of the 2nd parameter (number to compare with) */
-				arg2_2++;	/* start of the 2nd part of the 2nd parameter (mask) */
-			}
-		}
-		else
-			fail = 1;
-
-		if (1 == fail)
-			zabbix_log(LOG_LEVEL_DEBUG, "operator \"%s\" is not supported for function COUNT", arg3);
-		else if (0 != numeric_search && OP_LIKE == op)
-			zabbix_log(LOG_LEVEL_DEBUG, "operator \"like\" is not supported for counting numeric values");
-		else if (0 == numeric_search && OP_LIKE != op && OP_EQ != op && OP_NE != op)
-			zabbix_log(LOG_LEVEL_DEBUG, "operator \"%s\" is not supported for counting textual values", arg3);
-		else
-			fail = 0;
-
-		zbx_free(arg3);
-
-		if (0 != fail)
-			goto out;
-	}
-	else
-		op = (0 != numeric_search ? OP_EQ : OP_LIKE);
+	if (3 <= nparams && SUCCEED != get_function_parameter_str(item->host.hostid, parameters, 3, &arg3))
+		goto out;
 
 	if (4 <= nparams)
 	{
@@ -611,8 +562,62 @@ static int	evaluate_COUNT(char *value, DC_ITEM *item, const char *function, cons
 		now -= time_shift;
 	}
 
-	if (NULL != arg2 && '\0' == *arg2 && (0 != numeric_search || OP_LIKE == op))
-		zbx_free(arg2);
+	if (NULL == arg3 || '\0' == *arg3)
+		op = (0 != numeric_search ? OP_EQ : OP_LIKE);
+	else if (0 == strcmp(arg3, "eq"))
+		op = OP_EQ;
+	else if (0 == strcmp(arg3, "ne"))
+		op = OP_NE;
+	else if (0 == strcmp(arg3, "gt"))
+		op = OP_GT;
+	else if (0 == strcmp(arg3, "ge"))
+		op = OP_GE;
+	else if (0 == strcmp(arg3, "lt"))
+		op = OP_LT;
+	else if (0 == strcmp(arg3, "le"))
+		op = OP_LE;
+	else if (0 == strcmp(arg3, "like"))
+		op = OP_LIKE;
+	else if (0 == strcmp(arg3, "band"))
+		op = OP_BAND;
+
+	if (OP_UNKNOWN == op)
+	{
+		zabbix_log(LOG_LEVEL_DEBUG, "operator \"%s\" is not supported for function COUNT", arg3);
+		goto out;
+	}
+
+	if (0 != numeric_search)
+	{
+		if (NULL != arg3 && '\0' != *arg3 && '\0' == *arg2)
+		{
+			zabbix_log(LOG_LEVEL_DEBUG, "pattern must be provided along with operator for numeric values");
+			goto out;
+		}
+
+		if (OP_LIKE == op)
+		{
+			zabbix_log(LOG_LEVEL_DEBUG, "operator \"like\" is not supported for counting numeric values");
+			goto out;
+		}
+
+		if (OP_BAND == op && ITEM_VALUE_TYPE_FLOAT == item->value_type)
+		{
+			zabbix_log(LOG_LEVEL_DEBUG, "operator \"band\" is not supported for counting float values");
+			goto out;
+		}
+
+		if (OP_BAND == op && NULL != (arg2_2 = strchr(arg2, '/')))
+		{
+			*arg2_2 = '\0';	/* end of the 1st part of the 2nd parameter (number to compare with) */
+			arg2_2++;	/* start of the 2nd part of the 2nd parameter (mask) */
+		}
+	}
+	else if (OP_LIKE != op && OP_EQ != op && OP_NE != op)
+	{
+		zabbix_log(LOG_LEVEL_DEBUG, "operator \"%s\" is not supported for counting textual values", arg3);
+		goto out;
+	}
 
 	if (ZBX_FLAG_SEC == flag)
 		seconds = arg1;
@@ -622,20 +627,24 @@ static int	evaluate_COUNT(char *value, DC_ITEM *item, const char *function, cons
 	if (FAIL == zbx_vc_get_value_range(item->itemid, item->value_type, &values, seconds, nvalues, now))
 		goto out;
 
-	for (i = 0; i < values.values_num; i++)
+	/* skip counting values one by one if both pattern and operator are empty or "" is searched in text values */
+	if ((NULL != arg2 && '\0' != *arg2) || (NULL != arg3 && '\0' != *arg3 && OP_LIKE != op))
 	{
-		if (NULL == arg2 || SUCCEED == evaluate_COUNT_one(item->value_type, op, &values.values[i].value, arg2,
-				arg2_2))
+		for (i = 0; i < values.values_num; i++)
 		{
-			count++;
+			if (SUCCEED == evaluate_COUNT_one(item->value_type, op, &values.values[i].value, arg2, arg2_2))
+				count++;
 		}
 	}
+	else
+		count = values.values_num;
 
 	zbx_snprintf(value, MAX_BUFFER_LEN, "%d", count);
 
 	ret = SUCCEED;
 out:
 	zbx_free(arg2);
+	zbx_free(arg3);
 
 	zbx_history_record_vector_destroy(&values, item->value_type);
 
@@ -644,6 +653,7 @@ out:
 	return ret;
 }
 
+#undef OP_UNKNOWN
 #undef OP_EQ
 #undef OP_NE
 #undef OP_GT
