@@ -3,6 +3,8 @@ Changes for 3.0.3rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-10674] prohibited 'band' operator for counting float values (gleb)
+........S. [ZBX-10658] fixed count() evaluation for numeric values with operator and empty pattern (gleb)
 ........S. [ZBX-10551] fixed possible crash when constants are extracted from invalid trigger expression containing '{' without matching '}' (gleb)
 ..F....... [ZBX-10646] fixed adding trigger prototype dependencies when cloning a host or template (Ivo)
 ..F....... [ZBX-10511] fixed pagination throwing an error after performing enable or disable via link on an object (Ivo)
@@ -1333,6 +1335,8 @@ Changes for 2.2.13rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-10674] prohibited 'band' operator for counting float values (gleb)
+........S. [ZBX-10658] fixed count() evaluation for numeric values with operator and empty pattern (gleb)
 ........S. [ZBX-10312] changed sum(), str(), regexp(), iregexp() trigger functions to return 0 if there are no data in the requested range (wiper)
 
 --------------------------------------------------------------------------------
